Fix shortcuts alignment

--- a/herring/puzzles/static/puzzles/style.less
+++ b/herring/puzzles/static/puzzles/style.less
@@ -32,8 +32,7 @@ a {
 
 .shortcuts {
 	border: 1pt solid darken(@backgroundColor, 10%);
-	padding-top: @stdpadding;
-	padding-bottom: @stdpadding;
+	padding: @stdpadding;
 }
 
 .round + .round {
@@ -41,7 +40,7 @@ a {
 }
 
 .puzzle {
-	margin-left: @stdpadding * 2;
+	margin-left: @stdpadding;
 	.name {
 		display: inline-block;
 		font-weight: 900;
